--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <!-- Create your form here -->
-<h1>New Shoes</h1>
+<h1>Student Form</h1>
 
 <%= form_tag students_path do %>
   <label>First Name:</label><br>
